2012-12-07:
CME - changed as.rspec to work if user provides a 'whichwl' argument
CME - changed procspec to work with single reflectance spectrum
CME - added 'interp' argument to as.rspec and updated automatic search for wavelength column

2012-12-10:
CME - fixed aggspec.R (names of output dataset weren't matching input 'by' vector)

2012-12-14:
RM - fixed tcs (allows for "v" names in the cone classes)
RM - changed voloverlap: allows user to define colors, and if new plot should be called

2012-12-17
PPB - sensmodel changed to allow user-defined ocular media transmission

2012-12-18
RM - Updated sensitivity curves
RM - added scale parameter to vismodel (can now implement photon catch noise)
RM - changed how vismodel handles von Kries correction - now an option, to allow receptor noise model
RM - passed changes to vismodel to how coldist handles them. Now ready for receptor noise model
RM - coldist now accepts receptor noise
PPB - summary.rspec does not take any arguments and returns NAs for positive bmaxnegs and others
CME - fixed the way S5 is calculated in summary.rspec; segments now divided by total reflectance (B1) prior to determination of chroma (S5) to give a measure of saturation independent of brightness